--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,23 @@ a {
 	to { opacity: 0; }
 }
 
-.editDetails-buttonWrapper {
+.button-wrapper {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
+}
+
+.scream-profile-icon {
+	width: 50px;
+	height: 50px;
+	color: transparent;
+	border-radius: 50%;
+	position: relative;
+	margin-right: 8px;
+}
+
+.scream-username {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	margin-bottom: 5px;
 }
