--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ a {
 	border-radius: 50%;
 	position: relative;
 	cursor: pointer;
+	display: block;
 }
 .notifications {
 	color: #303030 !important;
